workshop04/wp-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-app-deploy
  labels:
    name: wp-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: wp-app-deploy
  template:
    metadata:
      name: wp-app-deploy
      labels:
        name: wp-app-deploy
        dept: eng
    spec:
      containers:
      - name : wp-app
        image: wordpress:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wpapp-svc
  labels:
    name: wpapp-svc
spec:
  type: ClusterIP
  selector:
    name: wp-app-deploy
  ports:
  - port: 8080
    targetPort: 80
