workshop04/wp-app-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-app-deploy
  labels:
    name: wp-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: wp-app-deploy
  template:
    metadata:
      name: wp-app-deploy
      labels:
        name: wp-app-deploy
        dept: eng
    spec:
      containers:
      - name : wp-app
        image: wordpress:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wpapp-svc
  labels:
    name: wpapp-svc
spec:
  type: ClusterIP
  selector:
    name: wp-app-deploy
  ports:
  - port: 8080
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
  labels:
    name: wp-ing
spec:
  ingressClassName: nginx
  rules:
  - host: wp.146.190.5.211.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: wpapp-svc
            port:
              number: 8080
